src/html/templates/styles.css
/* ... */
.symbolGroup {
  @apply space-y-12;

  article {
    @apply space-y-5;

    > div:first-child {
      @apply flex justify-between items-start;

      > div:first-child {
        @apply font-medium space-y-1;
      }
    }
  }
}

.docNodeKindIcon {
  @apply inline-flex justify-end shrink-0;

  div {
    @apply rounded-full size-5 font-medium text-xs leading-5 text-center
      align-middle shrink-0 select-none font-mono;
  }

  > * + * {
    @apply -ml-1.5;
  }
}

.example details {
  summary {
    @apply list-none flex items-center gap-2 py-2 rounded-lg w-full leading-6
      cursor-pointer;

    > div:first-child {
      @apply text-stone-600 select-none;
    }
  }

  &[open] summary > div:first-child {
    @apply rotate-90;
  }
}

.toc {
  h3 {
    @apply font-bold text-lg mb-3;
  }

  > div {
    @apply space-y-5;
  }

  .topSymbols {
    @apply space-y-3 text-sm;

    ul {
      @apply list-none space-y-2.5;

      li {
        @apply block;

        a {
          @apply flex items-center gap-2;

          > span {
            @apply block w-full overflow-hidden whitespace-nowrap text-ellipsis
              -my-0.5 -ml-1 py-0.5 pl-1 rounded;
          }
        }
      }
    }

    > a:hover {
      @apply underline;
    }
  }

  .documentNavigation {
    @apply max-sm:hidden text-sm space-y-3;

    > ul {
      @apply space-y-2 block overflow-y-auto flex-grow;

      > li {
        @apply mt-0.5 mx-3;
      }

      li {
        &:has(> ul) {
          @apply mt-0 !important;
        }

        &:has(> a) {
          @apply pb-0 !important;
        }
      }

      ul {
        @apply ml-3.5 space-y-2 text-gray-1 text-[0.8rem] leading-none;

        li {
          @apply mt-1 !important;

          a {
            @apply hover:text-black p-1;
          }
        }
      }
    }

    a {
      @apply hover:underline block overflow-hidden whitespace-nowrap
        text-ellipsis;
    }
  }
}

.usages {
  nav {
    @apply flex items-center flex-row gap-2 mb-3 font-semibold;

    details {
      > summary {
        @apply flex gap-1 select-none cursor-pointer rounded border
          border-gray-300 py-2 px-3;
      }

      > div {
        @apply md:relative;

        > div {
          @apply absolute max-md:inset-x-0 mt-1.5 p-2 block z-30 md:w-48
            bg-white md:rounded border max-md:border-x-0 border-gray-300;

          label {
            @apply flex items-center gap-2 cursor-pointer select-none px-2 py-1
              leading-normal rounded-sm hover:bg-gray-50;
          }
        }
      }
    }
  }
}

.usageContent {
  :not(.markdown) h3 {
    @apply font-bold text-lg mb-3;
  }

  .markdown {
    @apply text-xs text-[#686868];

    p {
      @apply m-0;
    }
  }

  pre.highlight {
    @apply border border-gray-300 max-md:border-x-0 bg-white;
    @apply mt-1 !important;

    > code:first-child {
      @apply py-2 px-3;
      scrollbar-width: thin;
    }

    .context_button {
      @apply top-1 right-2 hidden border-0;

      svg rect {
        @apply fill-white;
      }
    }

    &:hover .context_button {
      @apply block opacity-100;
    }
  }
}

#categoryPanel {
  @apply pt-3 text-sm;

  ul {
    @apply space-y-2 overflow-y-auto;

    li {
      @apply ml-1 mr-3;

      a {
        @apply hover:underline block overflow-hidden whitespace-nowrap
          text-ellipsis py-1.5 px-3.5;
      }
    }
  }
}

.contextLink {
  @apply text-contextLink/80 underline decoration-[1.5px]
    decoration-contextLink/50 underline-offset-[0.15em] hover:text-contextLink
    hover:decoration-contextLink;
  text-decoration-skip-ink: auto;
}

.breadcrumbs {
  @apply break-all inline-flex flex-wrap gap-1 items-center;

  > li:first-child {
    @apply text-2xl leading-none font-bold;
  }

  li {
    @apply inline text-lg lg:text-xl leading-[0.9em];
  }
}

.context_button {
  @apply z-10 rounded p-1.5 cursor-pointer border bg-inherit hover:bg-stone-200
    leading-[0];
}

.see {
  @apply list-disc list-inside;

  > li * {
    display: inline-block;
  }
}

/* markdown */
.markdown_border {
  @apply ml-1 pl-2.5 border-l-2 border-stone-300/40;
}

.markdown_summary, .markdown {
  a:not(.no_color) {
    @apply link;
  }
}

.markdown_summary {
  @apply inline text-stone-600;

  p {
    @apply inline-block line-clamp-4;
  }

  :not(pre) > code {
    @apply font-mono text-sm py-0.5 px-1.5 rounded bg-stone-200;
  }
}
/* ... */

